--- a/config/features.yml
+++ b/config/features.yml
@@ -26,7 +26,7 @@
   enabled: false
 - name: disable_branding
   display_name: Disable Branding
-  enabled: false
+  enabled: true
   premium: true
 - name: email_continuity_on_api_channel
   display_name: Email Continuity on API Channel
