--- a/config/features.yml
+++ b/config/features.yml
@@ -186,7 +186,7 @@
   enabled: false
 - name: whatsapp_campaign
   display_name: WhatsApp Campaign
-  enabled: false
+  enabled: true
 - name: crm_v2
   display_name: CRM V2
   enabled: false
