--- a/config/features.yml
+++ b/config/features.yml
@@ -187,6 +187,7 @@
 - name: whatsapp_campaign
   display_name: WhatsApp Campaign
   enabled: true
+  help_url: https://chwt.app/hc/campaigns
 - name: crm_v2
   display_name: CRM V2
   enabled: false
